# ucla_gazebo_RL

./: README.md
RL_general/: Agent.py  README.md  evaluate_policy.py  main.py  utils.py
RL_general/rospy_RL/: Agent.py  PPO_main.py  evaluate_policy.py  main.py  readme.md  rostest.py
robot_agent_gazebo/: CMakeLists.txt  package.xml
robot_agent_gazebo/agent/: README.md  RL_node.py  agent.py  agent_gazebo.py  evaluate_policy_gazebo.py  main_gazebo.py
robot_agent_gazebo/launch/: kuka_ball_balancing_scene.launch  task1.launch  task2.launch
robot_agent_gazebo/models/ball/urdf/: ball.urdf
robot_agent_gazebo/models/kuka_with_plate/config/: iiwa_control.yaml
robot_agent_gazebo/models/kuka_with_plate/launch/: iiwa_control.launch
robot_agent_gazebo/models/kuka_with_plate/urdf/: EEplate.urdf.xacro  iiwa7.urdf.xacro  iiwa7.xacro  inertias.urdf.xacro  inertias.urdf.xacro:Zone.Identifier  kuka_with_plate.urdf.xacro
robot_agent_gazebo/scripts/: Pseudocode_reward_function.md  kuka_teleop.py  kuka_teleop_2.py  state_helper.py
robot_agent_gazebo/worlds/: task_1.world  task_2.world  training_1.world
