<?xml version="1.0"?>
<package>
	<name>robot_agent_gazebo</name>
	<version>0.0.1</version>
	<description>ROS package allowing for RL training of a robot arm in Gazebo</description>
	<author email="jakesingh7@g.ucla.edu">Jake Singh</author>
	<maintainer email="jakesingh7@g.ucla.edu">Jake Singh</maintainer>
	<license>TODO</license>
	<buildtool_depend>catkin</buildtool_depend>
</package>
	
